--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "author": "Scott Morin <scott@journeyedu.co>",
     "license": "MIT",
     "dependencies": {
+        "inquirer": "^7.0.4",
         "nodemon": "^2.0.2",
         "opencage-api-client": "^0.5.1",
         "request": "^2.88.2",
